# rose

config/: support-rose.m4
projects/: Makefile.am
projects/POET_ROSE/: Cpp_ROSE.incl  Makefile.am  core.C  eval_ext_rose.cpp  multicore.C  stencil-gen.pt  stencil-input.code  stencil-output.code  stencil_ROSE.incl  stencil_lib.pi  stencil_lib.pt  testPermutations-save.C  testPermutations.C  tmp-save.C  tmp.C
projects/arrayOptimization/: ArrayProcessor.C  rose_interp1.C.save  rose_redBlack1.C.save
projects/autoParallelization/: autoParSupport.C
src/3rdPartyLibraries/POET/: AutoTuningInterface.cpp  codegen.cpp  driver.cpp  evalOp.cpp  parse.cpp  poet_AST.h  poet_lex.c  poet_lex.l  poet_yacc.c  poet_yacc.h  poet_yacc.y  tokenize.cpp
src/3rdPartyLibraries/POET/lib/: ExpStmt.incl  Loops.incl  utils.incl
src/midend/astUtil/astInterface/: AstInterface.C  AstInterface.h
src/midend/astUtil/symbolicVal/: SymbolicExpr.C
src/midend/programAnalysis/CFG/: CFG.h  CFGImpl.h
src/midend/programAnalysis/dataflowAnalysis/: DefUseChain.C
src/midend/programTransformation/loopProcessing/computation/: LoopTreeDummyNode.C  LoopTreeTransform.h
src/util/support/: BitVectorRepr.h  CommandOptions.C
tests/roseTests/loopProcessingTests/: LoopProcessor.C  TestDriver  dgemm.C.pt
tests/roseTests/programAnalysisTests/: CFGTest.C  DataFlowTest.C  PtrAnalTest.out1  StmtRefTest.C  TestDriver  steensgaardTest2.out1  steensgaardTest2.out2
tests/roseTests/programTransformationTests/: finiteDifferencingTest.C
tutorial/: inlineTransformations.C
(+3 files in other folders)
